json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,31 @@
 {
  "items": [
   {
+    "id": "3tJbF56hR_2uPQMLEjYtBg",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "stackoverflow.com",
+    "url": "https://stackoverflow.com/jobs/180661/senior-ios-engineer-follow-up-boss?a=YAsDNThp3UY",
+    "title": "Senior iOS Engineer at Follow Up Boss  ",
+    "content": "            <h2>About Follow Up Boss</h2>            <div><p>Our CRM is quite powerful under the hood and allows many various services to integrate with us through our API. Working here, there are always interesting problems to tackle. For example, we monitor tens of thousands of email mailboxes and process emails in the hundreds of millions.&nbsp;</p>            </div>                            <h2>Benefits</h2>                    <ul>                            <li>                                <span></span>                                <span>Fully Remote</span>                            </li>                            <li>                                <span></span>                                <span>Competitive Salary</span>                            </li>                            <li>                                <span></span>                                <span>Health and Dental</span>                            </li>                            <li>                                <span></span>                                <span>20 days paid holiday</span>                            </li>                            <li>                                <span></span>                                <span>Monthly gift cards for coffee, books,  food, charity, fitness and more</span>                            </li>                    </ul>                ",
+    "urlFetchPending": false,
+    "published": "May 12, 2018 10:07:55 PM",
+    "tags": [
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
     "id": "-RL8XqfvQl6e52TYR1JukA",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -417,31 +442,6 @@
     "content": "<p>Full-time</p><p><strong>(Anywhere)</strong> </p><p>We are looking for a creative iOS software engineer to join our US-based remote company. We’ve been crafting custom Mac and iOS software for our clients for over ten years and are adding to our iOS engineering team.</p><h3>RESPONSIBILITIES</h3><ul><li>Design and build advanced applications in Swift and Objective-C</li><li>Collaborate with cross-functional teams to define, design, and ship new features</li><li>Work with outside data sources and APIs</li><li>Unit-test code for robustness, including edge cases, usability, and general reliability</li><li>Work on bug fixing and improving application performance</li><li>Continuously discover, evaluate, and implement new technologies to maximize development efficiency</li><li>Cooperate with clients on best practices and approaches</li></ul><h3>REQUIRED SKILLS</h3><ul><li>5+ years of software development experience on Apple platforms</li><li>Shipping a title to the iTunes App Store.</li><li>Proficient with Swift, Cocoa, Cocoa Touch and Obj-C</li><li>Ability to deliver solid work on tight deadlines while working remotely</li><li>Must be a motivated team player able to work with minimal supervision</li><li>Design-minded</li><li>Strong attention to detail</li><li>Highly motivated self starter</li><li>macOS software development experience a plus</li><li>OpenGL/OpenGL ES experience a plus</li><li>Ability to work 40 hours per week on a flex time basis</li></ul><h3>PREFERENTIAL SKILLS &amp; EXPERIENCE</h3><ul><li>Past remote work experience</li><li>Previous small team experience</li><li>Software consulting or freelancing experience</li></ul><h3>DETAILS</h3><ul><li>Located near Houston, TX, is a plus but not required. Will travel 3-4 times/year to client site in Houston.</li><li>This is a full time employment position</li><li>Paid Time off</li><li>Sick Leave</li><li>Full medical, dental, and vision</li><li>Matching 401(k)</li></ul><p></p><p><strong>Apply:</strong> </p>",
     "urlFetchPending": false,
     "published": "Feb 28, 2018 1:37:33 AM",
-    "tags": [
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ]
-  },
-  {
-    "id": "eBSOXl9eQ1CX9KHPTWYyQw",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "weworkremotely.com-programming",
-    "url": "https://weworkremotely.com/remote-jobs/martiancraft-ios-developer-senior",
-    "title": "MartianCraft: iOS Developer, Senior",
-    "content": "<div>  <div>    <h2>iOS Developer, Senior </h2>      <h4>Posted Feb 23</h4>    <h3>      <span>MartianCraft</span><br>      <span>Headquarters: Everywhere</span><br>        <a href='http://martiancraft.com/careers/' rel='nofollow'>http://martiancraft.com/careers/</a>      <br>      <a rel='nofollow'>View all MartianCraft jobs →</a>    </h3>  </div></div>  <div>    <div>We are looking for a creative iOS software engineer to join our US-based remote company. We’ve been crafting custom Mac and iOS software for our clients for over ten years and are adding to our iOS engineering team.</div><div><br></div><div><h4>RESPONSIBILITIES</h4></div><ul><li>Design and build advanced applications in Swift and Objective-C</li><li>Collaborate with cross-functional teams to define, design, and ship new features</li><li>Work with outside data sources and APIs</li><li>Unit-test code for robustness, including edge cases, usability, and general reliability</li><li>Work on bug fixing and improving application performance</li><li>Continuously discover, evaluate, and implement new technologies to maximize development efficiency</li><li>Cooperate with clients on best practices and approaches</li></ul><div><h4>REQUIRED SKILLS</h4></div><ul><li>5+ years of software development experience on Apple platforms</li><li>Shipping a title to the iTunes App Store.</li><li>Proficient with Swift, Cocoa, Cocoa Touch and Obj-C</li><li>Ability to deliver solid work on tight deadlines while working remotely</li><li>Must be a motivated team player able to work with minimal supervision</li><li>Design-minded</li><li>Strong attention to detail</li><li>Highly motivated self starter</li><li>macOS software development experience a plus</li><li>OpenGL/OpenGL ES experience a plus</li><li>Ability to work 40 hours per week on a flex time basis</li></ul><div><h4>PREFERENTIAL SKILLS &amp; EXPERIENCE</h4></div><ul><li>Past remote work experience</li><li>Previous small team experience</li><li>Software consulting or freelancing experience</li></ul><div><h4>DETAILS</h4></div><ul><li>Located near Houston, TX, is a plus but not required. Will travel 3-4 times/year to client site in Houston.</li><li>This is a full time employment position</li><li>Paid Time off</li><li>Sick Leave</li><li>Full medical, dental, and vision</li><li>Matching 401(k)</li></ul>  </div>  <div>    <h4>Apply for this position</h4>    <p>Send application to: <a href='mailto:work@martiancraft.com' rel='nofollow'>work@martiancraft.com</a></p>  </div>",
-    "urlFetchPending": false,
-    "published": "Feb 23, 2018 8:53:46 PM",
     "tags": [
       "REMOTE1/100",
       "TECH1/apple",
