--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,89 @@
 {
  "items": [
   {
+    "id": "b5Nw-pzSRTuMIGSUpRzFog",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "jobmote",
+    "url": "http://jobmote.com/jobs/10233-inriver-pim-developer-maintenance-consultant-remote-work-possible",
+    "title": "inRiver PIM Developer / Maintenance Consultant (remote work possible)",
+    "content": "inRiver PIM Developer / Maintenance Consultant (remote work possible) - Jobmote<div><div><h2>inRiver PIM Developer / Maintenance Consultant (remote work possible)</h2><h5>comtech europe ltd</h5></div></div><div><div><div><div></div></div><div><div><div><p>For our client we are looking for an inRiver PIM competent developer, my client is based in Finland but remote work is possible from EU with trips required to Finland on occasion.</p><p><strong>Skills Required:</strong></p><ul><li>inRiver PIM Development &amp; Maintenance experience.</li></ul><p><strong>Job Description:</strong></p><p>This assignment is mainly maintenance and some inRiver development work. The team is small and you can work closely with the architect, you should have solid inRiver competence, since the team is small and no inRiver experts are available. </p><p>This is potentially long assignment, but first contract will be done until the end of the year. Please note EU nationals or candidates with EU Visa will be required as trips to Finland will be required.</p><p></p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>",
+    "urlFetchPending": false,
+    "published": "May 12, 2018 11:21:37 AM",
+    "tags": [
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ]
+  },
+  {
+    "id": "8nQ1Dbi_TY-2WiRjdBfxAA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/consensys/jobs/329947-legal-counsel",
+    "title": "Legal Counsel",
+    "content": "<div><h2>Legal Counsel at ConsenSys</h2><div>Brooklyn, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Regulatory Compliance, Real Estate Law, Mortgages</div><div>Compensation</div><div>$100K–$120K<br>0.01%–0.01%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Pangea is a platform to create, manage, and trade fractional ownership shares in real estate assets. Investors gain access to a variety of properties with greater liquidity and lower capital requirements than traditional real estate investing. Asset owners and investors benefit from the easy-to-use web application that houses property dashboards, due diligence, and peer-to-peer trades. Our mission is to make real estate investing simple and accessible to all.</p><p>Broad transactional coverage of the firm’s asset backed lending, securitization and structured finance businesses within real estate global markets<br>Support multi-strategy businesses that purchase, trade in, make markets and advise on and/or securitize large positions in commercial and residential mortgages, mortgage related securities, consumer and Fintech loans, CLO, ABS and other loan products.</p><p>Draft, review, and advise on a wide variety of structured finance and asset backed securities transactions, including warehouse lending transactions, mortgage loan originations, repurchase transactions, securitizations, repacks and other mortgage-related derivatives and loan products<br>Be actively involved in the management of legal, regulatory and reputational risk, including close coordination with other risk functions<br>Advise on Jobs Act, Reg A, Reg D and other laws and regulations governing the structured finance markets. Expertise with real estate a plus<br>Represent ConsenSys on related industry and regulatory committees and working groups</p><p>Advise the trading and structuring in relation to the legal and regulatory framework governing the securities and derivatives markets, including without limitation the Securities Act of 1933, the Securities Exchange Act of 1934 and Dodd-Frank</p><p>Work with team to structure transactions that achieve internal and/or client objectives (including, but not limited to, tax and/or accounting efficiency)</p><p>Core Competences:<br>-You should possess the following core competencies:<br>-Solid experience in capital markets, asset acquisition, CMBS, RMBS, CLO, consumer loans and other asset backed and lending transactions<br>-Experience representing underwriters, issuers, managers in a wide range of CMBS, RMBS, CLO, consumer loans and other asset backed financings including registered public offerings, exempt transactions and international and domestic offerings<br>-Familiarity with broker-dealer regulation, Dodd Frank, Reg A, Reg D, CFPB, state and federal regulators, lending, bankruptcy and various equity (REIT) and fixed income products and asset classes<br>-Excellent investigative and analytical skills<br>-Strong problem resolution and decision making ability<br>-Sophisticated written and oral communication skills<br>-Strong interpersonal and relationship skills<br>-A high degree of self-motivation and ability to thrive in a team environment<br>-A strong understanding of U.S. securities laws</p><p>Qualifications:<br>-Juris Doctor Degree or equivalent<br>-Qualified to practice law in the State of New York<br>-Work experience as attorney in the structured finance and securitization industry</p></div>",
+    "urlFetchPending": false,
+    "published": "May 11, 2018 9:47:42 PM",
+    "tags": [
+      "Attorney",
+      "Brooklyn",
+      "Full Time",
+      "Mortgages",
+      "REMOTE1/100",
+      "Real Estate Law",
+      "Regulatory Compliance",
+      "Remote OK",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ]
+  },
+  {
+    "id": "6jKmyDLsR262fY7Zs0fn4Q",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "remoteok.io",
+    "url": "https://remoteok.io/jobs/66980",
+    "title": "",
+    "content": "Remote at Cvedia PTE.      <div>SourceStack Overflow✖ remove✚ add filter</div><i></i><div><a rel='nofollow'>Hire Remote</a><div></div><div><h2><a rel='nofollow'><span>Remote</span></a><a rel='nofollow'><span>OK</span></a></h2></div><div></div><div></div><div><h2>get a <em>remote job</em><br>you can do <em>anywhere</em></h2></div><div></div></div><div><div><h2><a rel='nofollow'><span>Remote</span></a><a rel='nofollow'><span>OK</span></a></h2></div><div></div></div><div><div><div><a title=&quot;Remote Jobs&quot; rel='nofollow'><p><i></i> Remote Jobs</p></a><a title=&quot;Remote Software Development Jobs&quot; rel='nofollow'><p><i></i> Software Development</p></a><a title=&quot;Remote Customer Support Jobs&quot; rel='nofollow'><p><i></i> Customer Support</p></a><a title=&quot;Remote Marketing Jobs&quot; rel='nofollow'><p><i></i> Marketing</p></a><a title=&quot;Remote Design Jobs&quot; rel='nofollow'><p><i></i> Design</p></a><a title=&quot;Remote Non Tech Jobs&quot; rel='nofollow'><p><i></i> Non-tech</p></a><a title=&quot;Online Teaching Jobs&quot; rel='nofollow'><p><i></i> Online Teaching</p></a><a title=&quot;Top Remote Companies&quot; rel='nofollow'><p><i></i> Top Remote Companies</p></a><a title=&quot;Remote Work Statistics&quot; rel='nofollow'><p><i></i> Remote Work Statistics</p></a><span><p><a href='https://nomadlist.com/?ref=remoteok' rel='nofollow'><i></i> Become a </a><a href='https://nomadlist.com/?ref=remoteok' rel='nofollow'>Digital Nomad</a></p></span></div></div><div></div><div><div><div><p><i></i>&nbsp;    Jobs</p></div><div><p><i></i>&nbsp;    People</p></div></div></div><div><div><p> Hiring remotely? <span>Post a job that reaches <a rel='nofollow'>1,000,000+ remote workers</a></span></p><a rel='nofollow'>Post a Job - $299</a></div><table></table></div></div><div><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div><div></div><div><div><a href='http://dribbble.com' rel='nofollow'><div><i></i></div></a><a href='http://behance.com' rel='nofollow'><div><i></i></div></a><a href='http://github.com' rel='nofollow'><div><i></i></div></a><a href='http://stackoverflow.com' rel='nofollow'><div><i></i></div></a><a href='http://weworkmeteor.com' rel='nofollow'><div><i></i></div></a><a href='http://weworkremotely.com' rel='nofollow'><div><i></i></div></a><a href='http://wfh.io' rel='nofollow'><div><i></i></div></a><a href='http://authenticjobs.com' rel='nofollow'><div><i></i></div></a></div></div><div><a href='https://twitter.com/remote_ok' rel='nofollow'>Follow @remote_ok</a></div><div><div><a title=&quot;Product Hunt&quot; href='http://www.producthunt.com/posts/remote-ok' rel='nofollow'></a><a title=&quot;Hacker News&quot; href='https://news.ycombinator.com/item?id=9089778' rel='nofollow'></a><a title=&quot;Reddit&quot; href='http://www.reddit.com/r/digitalnomad/comments/2wral0/remote_ok_a_daily_aggregator_of_all_remote_jobs/' rel='nofollow'></a><a title=&quot;The Next Web&quot; href='https://www.facebook.com/thenextweb/posts/10153107210758523' rel='nofollow'></a><a title=&quot;Pinboard&quot; href='https://twitter.com/PinPopular/status/570004194632929281' rel='nofollow'></a><a title=&quot;Forbes&quot; href='http://www.forbes.com/sites/kaviguppta/2015/02/25/digital-nomads-are-redefining-what-it-means-to-be-productive/' rel='nofollow'></a><a title=&quot;Fast Company&quot; href='http://fastcompany.com/3043519/work-from-anywhere-startups-for-global-digital-nomads' rel='nofollow'></a><a title=&quot;Lifehacker&quot; href='http://lifehacker.ru/2015/02/26/traveling-freelancer/' rel='nofollow'></a><a title=&quot;Pinterest&quot; href='https://www.pinterest.com/pin/165999936241585050/' rel='nofollow'></a><a title=&quot;CareerDean&quot; href='https://www.careerdean.com/q/field-cross-paths-traveling' rel='nofollow'></a></div></div><div></div><a rel='nofollow'><i></i></a><div></div><div></div><div><span>Have feedback?</span><i></i><span>Need help? Have feedback? Be nice please! I'm a human too </span><span>Thanks for the message! I will get back to you soon.</span><div>Send</div></div><div></div>",
+    "urlFetchPending": false,
+    "published": "May 10, 2018 6:27:36 PM",
+    "tags": [
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ]
+  },
+  {
     "id": "D61DykqHQwGqqcVdsbqzaA",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
