json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,31 @@
 {
  "items": [
   {
+    "id": "ZFcawKrVR6WVgFFQSX_fIA",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "stackoverflow.com",
+    "url": "https://stackoverflow.com/jobs/175161/kickass-ios-developer-build-cool-stuff-with-seez-seez?a=WK6gNqHWgVi",
+    "title": "Kickass iOS developer - Build cool stuff with seez at Seez (Beirut, Lebanon) ",
+    "content": "            <h2>About Seez</h2>            <div><p>Seez was founded in 2016 and in June 2018 got funded with $1.8M. Seez&nbsp; develops and maintains the app Seez R, currently available in the United Arab Emirates. Our main vision is to ease the time spent for consumers to find their dream car, mostly through visibility, aggregation and automation.</p><p>We heavily focus on software and most of our team members are software developers or coming from math related fields.</p>            </div>                            <h2>Benefits</h2>                    <ul>                            <li>                                <span></span>                                <span>Work anywhere</span>                            </li>                            <li>                                <span></span>                                <span>Unlimited Paid Vacation</span>                            </li>                            <li>                                <span></span>                                <span>Competitive salary</span>                            </li>                            <li>                                <span></span>                                <span>Be a part of a community</span>                            </li>                            <li>                                <span></span>                                <span>Heavy start-up culture in a stable organization</span>                            </li>                            <li>                                <span></span>                                <span>Paid coworking space (if remote) or office</span>                            </li>                            <li>                                <span></span>                                <span>Strong peers to learn from</span>                            </li>                    </ul>                ",
+    "urlFetchPending": false,
+    "published": "May 15, 2018 10:14:46 AM",
+    "tags": [
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
     "id": "3tJbF56hR_2uPQMLEjYtBg",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -298,6 +323,38 @@
     ]
   },
   {
+    "id": "-tiFxMLFQVaX1MhtFL1JHQ",
+    "source": {
+      "contentTransform": "TEXT_STRIP_FORMATTING",
+      "jobAdContentRegExp": ""
+    },
+    "sourceName": "angel.co",
+    "url": "https://angel.co/scal-io/jobs/7304-sr-ios-engineer",
+    "title": "Sr. iOS Engineer",
+    "content": "<div><h2>Sr. iOS Engineer at Scal.io</h2><div>San Francisco, Remote · Contract</div><div></div></div><div><div>Skills</div><div>iOS Development, Swift</div><div>Compensation</div><div>$60K–$110K<br>0.05%–2.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Scal.io is a leading software development studio headquartered in downtown San Francisco with remote offices in Orange County and Atlanta. We've designed and developed systems, services and applications used daily by millions of people. From iOS and Android, to web-scale architectures in Javascript and Python, our engineers have worked across all technologies and stacks. We’ve developed software for a broad range of industries in entertainment, e-commerce, education, news, health, financial, media, real estate and government for companies such as Google, Uber, Yahoo, 23andMe, Brit+Co and Digg. We’ve partnered with numerous international organizations, think tanks, and NGOs to develop innovative technology for global markets.</p><p>We are currently seeking talented senior level iOS engineer to join our professional, internationally distributed engineering team. This is a full-time remote position.</p><p>Required Skills and Experience:</p><p>-- 5+ years of iOS development experience <br>-- 2+ years of Swift experience<br>-- CocoaPods/Carthage expertise<br>-- Strong working knowledge of Git (Git Flow, pull requests, etc)<br>-- Ability to read and understand English software requirements, strong written  <br>-- English, ability to conduct a basic interview in English<br>-- Bachelor’s Degree in Computer Science, Applied Mathematics, Electrical Engineering, etc or equivalent experience</p><p>Nice To Have Skills and Experience:</p><p>-- Functional Reactive Programming experience with RxSwift/RxCocoa <br>-- Experience with pods: Moya / Alamofire, MarkupKit<br>-- AWS cloud expertise<br>-- Continuous Integration experience with CircleCI or similar<br>-- Backend experience with NodeJS + Hapi or Scala + Finagle<br>-- Strong Verbal English Skills</p><p>Job Perks:</p><p>-- Work with a variety of clients including Fortune 500 and leading tech companies<br>-- Top of Market Pay for the right candidate (in USD)<br>-- Full-time remote position<br>-- Flexible working hours<br>-- Very professional team</p><p>Along with your cv, please, send us the links to the relevant code samples (Swift, Javascript, etc) and/or links to recent projects.</p><p>We also love likes on our Facebook page if you feel inclined. :)</p><p>   <a href='https://www.facebook.com/ScalioLabs/' rel='nofollow'>https://www.facebook.com/ScalioLabs/</a></p><p>We kindly ask agencies not to bother applying.</p></div>",
+    "urlFetchPending": false,
+    "published": "Mar 16, 2018 10:05:57 AM",
+    "tags": [
+      "Contract",
+      "Mobile Developer",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco",
+      "Software Engineer",
+      "Swift",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown",
+      "iOS Development"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ]
+  },
+  {
     "id": "ECoX9T6hS6yqx4LbJvvgeQ",
     "source": {
       "contentTransform": "TEXT_STRIP_FORMATTING",
@@ -392,56 +449,6 @@
     "content": "<div>                  <span>Drivy | Multiple jobs (Backend, Full-Stack, iOS, SRE) | Paris, France | ONSITE, REMOTE, Full-time | <a href='https://en.drivy.com/jobs' rel='nofollow'>https://en.drivy.com/jobs</a>, <a href='https://drivy.engineering' rel='nofollow'>https://drivy.engineering</a>We believe shared cars are a better way to move around, offering more flexibility and more convenience.<p>We are already the #1 car rental marketplace in Europe, and we believe the adoption will be 100 times larger in just a few years.</p><p>We are present in several countries, have great mobile apps, and kickass hardware. And we're just getting started.</p><p>We're looking for Backend, Full-Stack, Reliability and iOS engineers.</p><p>Take a look at our engineering blog - <a href='https://drivy.engineering' rel='nofollow'>https://drivy.engineering</a> <a href='https://en.drivy.com/jobs' rel='nofollow'>https://en.drivy.com/jobs</a></p><p>Please apply via the above link and mention Hacker News!<span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>",
     "urlFetchPending": false,
     "published": "Mar 1, 2018 6:59:14 PM",
-    "tags": [
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ]
-  },
-  {
-    "id": "R5nBHs_oQz2jaS9AoPDd4Q",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "jobmote",
-    "url": "http://jobmote.com/jobs/928-ios-developer",
-    "title": "iOS Developer",
-    "content": "iOS&nbsp;Developer - Jobmote<div><div><h2>iOS&nbsp;Developer</h2><h5>MartianCraft</h5></div></div><div><div><div><div><div><p>We are looking for a creative iOS software engineer to join our US-based remote company. We’ve been crafting custom Mac and iOS software for our clients for over ten years and are adding to our iOS engineering team.</p><h4>RESPONSIBILITIES</h4><ul><li>Design and build advanced applications in Swift and Objective-C</li><li>Collaborate with cross-functional teams to define, design, and ship new features</li><li>Work with outside data sources and APIs</li><li>Unit-test code for robustness, including edge cases, usability, and general reliability</li><li>Work on bug fixing and improving application performance</li><li>Continuously discover, evaluate, and implement new technologies to maximize development efficiency</li><li>Cooperate with clients on best practices and approaches</li></ul><h4>REQUIRED SKILLS</h4><ul><li>5+ years of software development experience on Apple platforms</li><li>Shipping a title to the iTunes App Store.</li><li>Proficient with Swift, Cocoa, Cocoa Touch and Obj-C</li><li>Ability to deliver solid work on tight deadlines while working remotely</li><li>Must be a motivated team player able to work with minimal supervision</li><li>Design-minded</li><li>Strong attention to detail</li><li>Highly motivated self starter</li><li>macOS software development experience a plus</li><li>OpenGL/OpenGL ES experience a plus</li><li>Ability to work 40 hours per week on a flex time basis</li></ul><h4>PREFERENTIAL SKILLS &amp; EXPERIENCE</h4><ul><li>Past remote work experience</li><li>Previous small team experience</li><li>Software consulting or freelancing experience</li></ul><h4>DETAILS</h4><ul><li>Located near Houston, TX, is a plus but not required. Will travel 3-4 times/year to client site in Houston.</li><li>This is a full time employment position</li><li>Paid Time off</li><li>Sick Leave</li><li>Full medical, dental, and vision</li><li>Matching 401(k)</li></ul></div></div><div></div></div></div></div>",
-    "urlFetchPending": false,
-    "published": "Feb 28, 2018 2:21:47 AM",
-    "tags": [
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ]
-  },
-  {
-    "id": "QaVH6xG2SjG4l0vudkic8Q",
-    "source": {
-      "contentTransform": "TEXT_STRIP_FORMATTING",
-      "jobAdContentRegExp": ""
-    },
-    "sourceName": "authenticjobs.com",
-    "url": "https://authenticjobs.com/jobs/30345?r=rss2",
-    "title": "MartianCraft: iOS Developer",
-    "content": "<p>Full-time</p><p><strong>(Anywhere)</strong> </p><p>We are looking for a creative iOS software engineer to join our US-based remote company. We’ve been crafting custom Mac and iOS software for our clients for over ten years and are adding to our iOS engineering team.</p><h3>RESPONSIBILITIES</h3><ul><li>Design and build advanced applications in Swift and Objective-C</li><li>Collaborate with cross-functional teams to define, design, and ship new features</li><li>Work with outside data sources and APIs</li><li>Unit-test code for robustness, including edge cases, usability, and general reliability</li><li>Work on bug fixing and improving application performance</li><li>Continuously discover, evaluate, and implement new technologies to maximize development efficiency</li><li>Cooperate with clients on best practices and approaches</li></ul><h3>REQUIRED SKILLS</h3><ul><li>5+ years of software development experience on Apple platforms</li><li>Shipping a title to the iTunes App Store.</li><li>Proficient with Swift, Cocoa, Cocoa Touch and Obj-C</li><li>Ability to deliver solid work on tight deadlines while working remotely</li><li>Must be a motivated team player able to work with minimal supervision</li><li>Design-minded</li><li>Strong attention to detail</li><li>Highly motivated self starter</li><li>macOS software development experience a plus</li><li>OpenGL/OpenGL ES experience a plus</li><li>Ability to work 40 hours per week on a flex time basis</li></ul><h3>PREFERENTIAL SKILLS &amp; EXPERIENCE</h3><ul><li>Past remote work experience</li><li>Previous small team experience</li><li>Software consulting or freelancing experience</li></ul><h3>DETAILS</h3><ul><li>Located near Houston, TX, is a plus but not required. Will travel 3-4 times/year to client site in Houston.</li><li>This is a full time employment position</li><li>Paid Time off</li><li>Sick Leave</li><li>Full medical, dental, and vision</li><li>Matching 401(k)</li></ul><p></p><p><strong>Apply:</strong> </p>",
-    "urlFetchPending": false,
-    "published": "Feb 28, 2018 1:37:33 AM",
     "tags": [
       "REMOTE1/100",
       "TECH1/apple",
