connect domain to firebase, 2nd attempt
Former-commit-id: 70f4bceb750bf05a358adf8cbbd6b0dc814b724d

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ jobnav_nontech_node : 2
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:categories/:year/:month/:day/:title
 
+include: [".well-known/acme-challenge/PuV6PE47UDB-GBCRnjS3CixSArz9eEyfie_H87lqSVY"]
+
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: rouge
 
